--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,6 @@
 .page {
+  max-width: 1280px;
+  margin: 0 auto;
   background-color: #2A2C2F;
   font-family: 'Inter', 'Arial', sans-serif;
   color: #FFFFFF;
