--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,7 @@
 .place__url-heading {
   margin: 0 0 12px;
   font-size: 12px;
+  text-transform: uppercase;
   line-height: 12px;
   font-weight: 400;
   letter-spacing: 0.2em;
