--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,5 @@
 .footer {
-  margin: 0 48px 0;
-  padding-bottom: 24px;
+  padding: 0px 48px 24px;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -8,16 +7,13 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    margin: 0 24px 0;
+    padding: 0 24px 24px;
   }
 }
 
 @media screen and (max-width: 700px) {
   .footer {
     flex-direction: column;
-    margin-left: 16px;
+    padding-left: 16px;
   }
 }
-
-
-
