--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,26 +1,24 @@
 .header {
   display: flex;
   flex-direction: row;
-  margin: 0 48px 0;
-  padding: 28px 0 56px;
+  padding: 28px 48px 56px;
   justify-content: space-between;
 }
 
 @media screen and (max-width: 1024px) {
   .header  {
-    padding-bottom: 48px;
+    padding: 28px 48px 48px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .header  {
-    margin: 0 24px 0;
+    padding: 28px 24px 48px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .header  {
-    margin: 0 16px 0;
-    padding-top: 16px;
+    padding: 16px 16px 48px;
   }
 }
