--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,34 +1,31 @@
 .intro {
-  padding: 92px 0 92px;
+  padding: 92px 442px 92px 148px;
   max-width: 690px;
   display: flex;
   flex-direction: column;
-  margin: 0 442px 0 148px;
 }
 
 @media screen and (max-width: 1024px) {
   .intro {
-    margin: 0 286px 0 48px;
+    padding: 92px 286px 92px 48px;
   }
 } 
 
 @media screen and (max-width: 768px) {
   .intro {
-    padding: 88px 0 88px;
+    padding: 88px 24px 88px 24px;
     max-width: 720px;
-    margin: 0 24px 0;
   }
 }  
 
 @media screen and (max-width: 425px) {
   .intro {
-    padding: 64px 0 64px;
-    margin: 0 16px 0;
+    padding: 64px 16px 64px 16px;
   }
 } 
 
 @media screen and (max-width: 300px) {
   .intro {
-    margin: 0;
+    padding: 0;
   }
 } 
