--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -5,3 +5,9 @@
 .place__paragraph:last-of-type {
   margin: 0;
 }
+
+@media screen and (max-width: 1000px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
+}
