--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,28 +1,25 @@
 .places {
-  margin: 0 148px 0;
+  padding: 0px 148px 92px;
   display: grid;
   gap: 80px;
-  padding-bottom: 92px;  
-}
+  }
 
 @media screen and (max-width: 1200px) {
   .places {
-    margin: 0 48px 0;
+    padding: 0 48px 0;
   }
 }
 
 @media screen and (max-width: 1000px) {
   .places {
-    margin: 0 24px 0;
+    padding: 0 24px 90px;
     gap: 73px;
-    padding-bottom: 90px;  
   }
 }
 
 @media screen and (max-width: 700px) {
   .places {
-    margin: 0;
+    padding: 0px 0px 66px; 
     gap: 50px;
-    padding-bottom: 66px;  
   }
 }
